# adaptive-stat-arb

./: .gitignore  README.md  pyproject.toml
docs/: CODE_REVIEW_FIXES.md  architecture.md  math.md
examples/: pressure_test_real_data.py  stage0_buyandhold_gate.py  stage1_pairs_ou.py  stage2_optimal_stopping.py  stage3_kalman.py  stage4_regime_switching.py  stage5_uncertainty.py  stage6_eigenportfolio.py  stage7_execution.py  stage8_neural_sde.py
interview_prep/: CODE_REVIEW_FIXES.md
src/stat_arb/: __init__.py
src/stat_arb/calibration/: __init__.py  harness.py
src/stat_arb/data/: __init__.py  base.py  csv_source.py  openbb_source.py  synthetic.py  yfinance_source.py
src/stat_arb/engine/: __init__.py  accounting.py  backtester.py  events.py  execution.py  portfolio.py  strategy.py
src/stat_arb/stage1/: __init__.py  cointegration.py  ou_mle.py  pair.py  strategy.py
src/stat_arb/stage2/: __init__.py  optimal_stopping.py  strategy.py
src/stat_arb/stage3/: __init__.py  kalman_cointegration.py  strategy.py
src/stat_arb/stage4/: __init__.py  regime_switching.py  strategy.py
src/stat_arb/stage5/: __init__.py  bayesian_ou.py  particle_filter.py  strategy.py
src/stat_arb/stage6/: __init__.py  covariance.py  eigenportfolio.py  strategy.py  vecm.py
src/stat_arb/stage7/: __init__.py  execution.py  (+1 more)
tests/: conftest.py  test_cointegration.py  test_engine.py  test_kalman.py  test_optimal_stopping.py  test_ou_mle.py  test_regime_switching.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage8.py  test_strategies.py  test_synthetic.py  test_validation.py
(+12 files in other folders)
